--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
     "express": "^4.15.3",
-    "fixed-data-table": "^0.6.4",
     "morgan": "^1.8.2",
     "pg": "^6.4.0",
     "pg-hstore": "^2.3.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react-data-grid": "^2.0.58",
+    "react-data-grid-addons": "^2.0.58",
+    "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
+    "react-router": "^3.0.5",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.1",
     "redux-logger": "^3.0.6",
